Finished order endpoints and updated old functions.
